<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">



<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10sp"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    app:layout_constraintTop_toTopOf="parent"
    app:cardBackgroundColor="@color/purple_200">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_surname"
            android:padding="15dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textSize="8sp"
            android:padding="15dp"/>

        <TextView
            android:id="@+id/date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth"
            android:padding="15dp"
            android:textSize="8sp"/>

    </LinearLayout>



</androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>